--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Ascadis{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -13,6 +15,23 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
+    <header>
+        <div class="px-3 py-2 bg text-white">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                    <a class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none" href="#">
+                        <img class="bi me-2" width="100" src="uploads/border-grey.png" alt="logo-ascadis">
+                    </a>
+                    <ul class="nav nav-pills">
+                        <li class="nav-item"><a href="#" class="nav-link">Accueil</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Annuaire</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Fournisseurs</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Clients</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
     <body>
         {% block body %}{% endblock %}
     </body>
