Création du header (partie 2)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,11 +22,11 @@
                     <a class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none" href="#">
                         <img class="bi me-2" width="100" src="uploads/border-grey.png" alt="logo-ascadis">
                     </a>
-                    <ul class="nav nav-pills">
-                        <li class="nav-item"><a href="#" class="nav-link">Accueil</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Annuaire</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Fournisseurs</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Clients</a></li>
+                    <ul class="nav nav-pills ">
+                        <li class="nav-item marge"><a href="#" class="btn btn-secondary">Accueil</a></li>
+                        <li class="nav-item marge"><a href="#" class="btn btn-secondary">Annuaire</a></li>
+                        <li class="nav-item marge"><a href="#" class="btn btn-secondary">Fournisseurs</a></li>
+                        <li class="nav-item marge"><a href="#" class="btn btn-secondary">Clients</a></li>
                     </ul>
                 </div>
             </div>
