Création du header (partie 3)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,10 +23,10 @@
                         <img class="bi me-2" width="100" src="uploads/border-grey.png" alt="logo-ascadis">
                     </a>
                     <ul class="nav nav-pills ">
-                        <li class="nav-item marge"><a href="#" class="btn btn-secondary">Accueil</a></li>
-                        <li class="nav-item marge"><a href="#" class="btn btn-secondary">Annuaire</a></li>
-                        <li class="nav-item marge"><a href="#" class="btn btn-secondary">Fournisseurs</a></li>
-                        <li class="nav-item marge"><a href="#" class="btn btn-secondary">Clients</a></li>
+                        <li class="nav-item marge"><a href="#" class="btn btn-secondary rounded-pill padd">Accueil</a></li>
+                        <li class="nav-item marge"><a href="#" class="btn btn-secondary rounded-pill padd">Annuaire</a></li>
+                        <li class="nav-item marge"><a href="#" class="btn btn-secondary rounded-pill padd">Fournisseurs</a></li>
+                        <li class="nav-item marge"><a href="#" class="btn btn-secondary rounded-pill padd">Clients</a></li>
                     </ul>
                 </div>
             </div>
