--- a/templates/acces_portail/index.html.twig
+++ b/templates/acces_portail/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}AccesPortail index{% endblock %}
 
 {% block body %}
+    <div class="container">
     <h1>AccesPortail index</h1>
 
     <table class="table">
@@ -38,4 +39,5 @@
     </table>
 
     <a href="{{ path('app_acces_portail_new') }}">Create new</a>
+    </div>
 {% endblock %}
