--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -13,7 +13,7 @@
                 <th scope="col">Nom favoris</th>
                 <th scope="col">URL</th>
             </tr>
-            </thead
+            </thead>
             <tbody>
             {% if app.user and app.user.favoris != null %}
                 {% for favori in app.user.favoris %}
