--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -29,6 +29,10 @@
             {% endif %}
             </tbody>
         </table>
+        <a class="btn btn-primary" href="{{ path('app_favoris_index') }}">
+            <i class="fa fa-plus"></i>
+            Ajouter / Modifier vos favoris
+        </a>
     </div>
 
 {% endblock %}
