--- a/templates/acces_portail/index.html.twig
+++ b/templates/acces_portail/index.html.twig
@@ -6,15 +6,15 @@
     <div class="container">
         <h1>Mot de Passe Partagés</h1>
 
-        <table class="table">
+        <table class="table table-bordered">
             <thead>
-            <tr>
-                <th scope="col">Nom</th>
-                <th scope="col">Login</th>
-                <th scope="col">Password</th>
-                <th scope="col">Description</th>
-                <th scope="col">actions</th>
-            </tr>
+                <tr>
+                    <th scope="col">Nom</th>
+                    <th scope="col">Login</th>
+                    <th scope="col">Password</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">actions</th>
+                </tr>
             </thead>
             <tbody>
             {% if acces_portails %}
@@ -25,8 +25,16 @@
                         <td>{{ acces_portail.password }}</td>
                         <td>{{ acces_portail.description }}</td>
                         <td>
-                            <a href="{{ path('app_acces_portail_show', {'id': acces_portail.id}) }}">voir</a>
-                            <a href="{{ path('app_acces_portail_edit', {'id': acces_portail.id}) }}">edit</a>
+                            <a class="btn btn-primary"
+                               href="{{ path('app_acces_portail_show', {'id': acces_portail.id}) }}">
+                                <i class="fa fa-eye"></i>
+                                Voir
+                            </a>
+                            <a class="btn btn-primary"
+                               href="{{ path('app_acces_portail_edit', {'id': acces_portail.id}) }}">
+                                <i class="fa fa-pencil"></i>
+                                Modifier
+                            </a>
                         </td>
                     </tr>
                 {% else %}
@@ -37,7 +45,11 @@
             {% endif %}
             </tbody>
         </table>
+        <a class="btn btn-primary" href="{{ path('app_acces_portail_new') }}">
+            <i class="fa fa-plus"></i>
+            Ajouter un nouveau
+        </a>
     </div>
 
-    <a href="{{ path('app_acces_portail_new') }}">Create new</a>
+
 {% endblock %}
