--- a/templates/favoris/index.html.twig
+++ b/templates/favoris/index.html.twig
@@ -36,7 +36,7 @@
                     </tr>
                 {% else %}
                     <tr>
-                        <td colspan="4">no records found</td>
+                        <td colspan="4">Pas de favoris enregistrée</td>
                     </tr>
                 {% endfor %}
             </tbody>
