--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
         <div class="px-3 py-2 bg-blue text-white">
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                    <a class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none" href="#">
+                    <a class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none" href="{{ path('home') }}">
                         <img class="bi me-2" width="100" src="/uploads/border-grey.png" alt="logo-ascadis">
                     </a>
                     <ul class="nav nav-pills ">
